twitter link removed

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
 <body>
   <div class="main">
-    The cobbler's children are the worst shod. Use these instead:
+    The cobbler's children are the worst shod. Use this instead:
     <ul>
       <li><a href="https://github.com/eymengunay">github.com/eymengunay</a></li>
-      <li><a href="https://twitter.com/eymengunay">twitter.com/eymengunay</a></li>
     </ul>
     <p>Did you mean: <a href="https://www.instagram.com/gunayelcin">instagram.com/gunayelcin</a>?</p>
   </div>
