meta description added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Greetings! You've found my personal page — a little spot on the web just for me!">
 <title>Eymen Gunay</title>
 <link rel="shortcut icon" href="/favicon.ico" />
 </head>
